--- a/src/pages/cart/cart.css
+++ b/src/pages/cart/cart.css
@@ -58,6 +58,6 @@
 
 }
         .cart-item img {
-    width: 130px;
-    border: 1px solid black;
+    width: 140px;
+    
 }
